force-app/main/default/objects/Vendor_Group_Configuration__mdt/Vendor_Group_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Vendor Group Configuration</label>
    <pluralLabel>Vendor Group Configuration</pluralLabel>
</CustomObject>