force-app/main/default/objects/Vendor_Group_Configuration__mdt/fields/Enviroment__c.field-meta.xml
<CustomField>
    <fullName>Enviroment__c</fullName>
    <inlineHelpText>Please select the environment for the specified values</inlineHelpText>
    <label>Enviroment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sandbox</fullName>
                <default>true</default>
                <label>Sandbox</label>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>