force-app/main/default/objects/Vendor_Group_Configuration__mdt/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check/Uncheck to Activate/Deactivate Group</inlineHelpText>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>