force-app/main/default/objects/Vendor_Group_Configuration__mdt/fields/Vendor_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Group_ID__c</fullName>
    <inlineHelpText>Please enter Vendor Public Group 18 Digit ID</inlineHelpText>
    <label>Vendor Group ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>