force-app/main/default/objects/Vendor_Group_Configuration__mdt/fields/Vendor_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Group_Name__c</fullName>
    <inlineHelpText>Please enter Vendor Public Group Developer Name</inlineHelpText>
    <label>Vendor Group Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>